WIP: attempts to give better feedback