@@ -5,10 +5,18 @@ import java.io.InputStream;
 import java.io.ObjectInputFilter;
 import java.io.ObjectInputStream;
 import java.io.ObjectStreamClass;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import com.vaadin.kubernetes.starter.sessiontracker.serialization.debug.DebugMode;
+import com.vaadin.kubernetes.starter.sessiontracker.serialization.debug.Track;
 
 /**
  * An {@link ObjectInputStream} implementation that takes care to inject known
@@ -28,16 +36,44 @@ import org.slf4j.LoggerFactory;
  */
 public class TransientInjectableObjectInputStream extends ObjectInputStream {
 
+    private final VarHandle passHandleHandle;
     private final TransientHandler injector;
+    private Map<Integer, Track> tracked;
 
     public TransientInjectableObjectInputStream(InputStream in,
             TransientHandler injector) throws IOException {
         super(in);
         this.injector = injector;
         enableResolveObject(true);
+        boolean canAccess = ObjectInputStream.class.getModule().isOpen(
+                ObjectInputStream.class.getPackageName(),
+                TransientInjectableObjectInputStream.class.getModule());
+        if (canAccess) {
+            passHandleHandle = tryGetHandle("passHandle", int.class);
+        } else {
+            getLogger().warn(
+                    "Cannot reflect on ObjectInputStream. Please open java.io to UNNAMED module, adding "
+                            + "'--add-opens java.base/java.io=ALL-UNNAMED' to the JVM arguments.");
+            passHandleHandle = null;
+        }
+    }
 
-        if (injector instanceof TransientHandler.DebugMode) {
-            setObjectInputFilter(new TrackingFilter());
+    @Override
+    protected void readStreamHeader() throws IOException {
+        setObjectInputFilter(new TrackingFilter());
+        super.readStreamHeader();
+        try {
+            boolean hasTrackData = (boolean) readObject();
+            if (hasTrackData) {
+                List<Track> trackList = (List<Track>) readObject();
+                tracked = trackList.stream().filter(t -> t.getHandle() != -1)
+                        .collect(Collectors.toMap(Track::getHandle,
+                                Function.identity()));
+                super.readStreamHeader();
+                readObject(); // Debug mode flag is duplicated on tracked stream
+            }
+        } catch (ClassNotFoundException e) {
+            throw new IOException(e);
         }
     }
 
@@ -45,19 +81,35 @@ public class TransientInjectableObjectInputStream extends ObjectInputStream {
 
         @Override
         public Status checkInput(FilterInfo filterInfo) {
-            Class<?> serialClass = filterInfo.serialClass();
-            if (serialClass != null) {
-                // Track classes being deserialized for debugging purpose
-                try {
-                    ((TransientHandler.DebugMode) TransientInjectableObjectInputStream.this.injector)
-                            .onDeserialize(serialClass, filterInfo.depth());
-                } catch (Exception ex) {
-                    // Ignore, debug handler is not supposed to throw exception
-                    // that may stop deserialization process
+            if (TransientInjectableObjectInputStream.this.injector instanceof DebugMode) {
+                Track track = TransientInjectableObjectInputStream.this
+                        .lookupObject();
+                Class<?> serialClass = filterInfo.serialClass();
+                if (serialClass != null || track != null) {
+
+                    // Track classes being deserialized for debugging purpose
+                    if (track != null && track.depth == -1) {
+                        // gather data with reflection not enabled
+                        // use FilterInfo
+                        track = track
+                                .withEstimatedDepth((int) filterInfo.depth());
+                    } else if (track == null) {
+                        track = Track.unknown((int) filterInfo.depth(),
+                                serialClass);
+                    }
+                    try {
+                        ((DebugMode) TransientInjectableObjectInputStream.this.injector)
+                                .onDeserialize(serialClass, track);
+                    } catch (Exception ex) {
+                        // Ignore, debug handler is not supposed to throw
+                        // exception
+                        // that may stop deserialization process
+                    }
                 }
             }
             return Status.UNDECIDED;
         }
+
     }
 
     @Override
@@ -85,11 +137,13 @@ public class TransientInjectableObjectInputStream extends ObjectInputStream {
     }
 
     @Override
-    protected Object resolveObject(Object obj) throws IOException {
-        if (injector instanceof TransientHandler.DebugMode) {
+    protected Object resolveObject(Object obj) {
+        if (injector instanceof DebugMode) {
             // track deserialized objects for debugging purpose
             try {
-                obj = ((TransientHandler.DebugMode) injector).onDeserialized(obj);
+                Track track = TransientInjectableObjectInputStream.this
+                        .lookupObject();
+                obj = ((DebugMode) injector).onDeserialized(obj, track);
             } catch (Exception ex) {
                 // Ignore, debug handler is not supposed to throw exception
                 // that may stop deserialization process
@@ -122,4 +176,28 @@ public class TransientInjectableObjectInputStream extends ObjectInputStream {
         return LoggerFactory
                 .getLogger(TransientInjectableObjectInputStream.class);
     }
+
+    private Track lookupObject() {
+        try {
+            int handle = (int) passHandleHandle.get(this);
+            return tracked.get(handle);
+        } catch (Throwable e) {
+            // Ignore
+        }
+        return null;
+    }
+
+    private static VarHandle tryGetHandle(String name, Class<?> type) {
+        try {
+            return MethodHandles
+                    .privateLookupIn(ObjectInputStream.class,
+                            MethodHandles.lookup())
+                    .findVarHandle(ObjectInputStream.class, name, type);
+        } catch (Exception ex) {
+            getLogger().trace("Cannot access ObjectInputStream.{} field", name,
+                    ex);
+            return null;
+        }
+    }
+
 }
